--- a/deployment/mesh-infra/storage/keycloak.yaml
+++ b/deployment/mesh-infra/storage/keycloak.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: microk8s-hostpath
+  storageClassName: standard
   resources:
     requests:
       storage: 1Gi
