--- a/deployment/mesh-infra/argocd/projects/base/app.yaml
+++ b/deployment/mesh-infra/argocd/projects/base/app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: mesh-infra
   source:
-    repoURL: https://github.com/c0c0n3/kitt4sme.live
+    repoURL: https://github.com/team-hawking-stam/kitt4sme.live
     targetRevision: HEAD
     path: deployment/mesh-infra/app
   destination:
