--- a/deployment/plat-app-services/dazzler/base.yaml
+++ b/deployment/plat-app-services/dazzler/base.yaml
@@ -31,13 +31,24 @@ spec:
       labels:
         app: dazzler
     spec:
+      imagePullSecrets:
+        - name: thanos-image
       containers:
-        - image: "ghcr.io/c0c0n3/kitt4sme.dazzler:latest"
+        - image: "registry.gitlab.com/stamtech/industrial-automation-solutions/thanos/dazzler"
           imagePullPolicy: IfNotPresent
           name: dazzler
           ports:
           - containerPort: 8000
             name: http
           env:
-          - name: "quantumleap_base_url"
-            value: "http://quantumleap:8668"
+          - name: "DAZZLER_CONFIG"
+            value: "/etc/dazzler-config.yaml"
+          volumeMounts:
+          - name: dazzler-config
+            mountPath: /etc/dazzler-config.yaml
+            subPath: dazzler-config.yaml
+            readOnly: true
+      volumes:
+      - name: dazzler-config
+        configMap:
+          name: dazzler-config
