--- a/deployment/plat-app-services/dazzler/kustomization.yaml
+++ b/deployment/plat-app-services/dazzler/kustomization.yaml
@@ -3,4 +3,8 @@ kind: Kustomization
 
 resources:
 - base.yaml
-- dazzler-config.yaml
+
+configMapGenerator:
+- name: dazzler-config
+  files:
+  - dazzler-config.yaml
