--- a/deployment/mesh-infra/security/ingress-policy.yaml
+++ b/deployment/mesh-infra/security/ingress-policy.yaml
@@ -29,4 +29,5 @@ spec:
         - "/orion/*"
         - "/orion/version"
         - "/quantumleap/version"
+        - "/grafana"
         - "/grafana/*"
