--- a/deployment/mesh-infra/routing/kustomization.yaml
+++ b/deployment/mesh-infra/routing/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- ingress.gcp.yaml
+- managed-cert.yaml
 - ingress.yaml
