--- a/deployment/mesh-infra/routing/ingress.gcp.yaml
+++ b/deployment/mesh-infra/routing/ingress.gcp.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: istio-gcp-ingress
+  namespace: istio-system
   annotations:
     kubernetes.io/ingress.class: gce
     kubernetes.io/ingress.global-static-ip-name: thanos
