--- a/deployment/mesh-infra/routing/ingress.gcp.yaml
+++ b/deployment/mesh-infra/routing/ingress.gcp.yaml
@@ -1,20 +1,26 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: "networking.k8s.io/v1"
+kind: "Ingress"
+metadata:
+  name: "istio-gcp-ingress"
+  namespace: "istio-system"
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: thanos
+    networking.gke.io/managed-certificates: "thanos-ssl-cert"
+spec:
+  defaultBackend:
+    service:
+      name: "istio-ingressgateway"
+      port:
+        number: 80
+status:
+  loadBalancer: {}
+---
+apiVersion: cloud.google.com/v1
+kind: BackendConfig
 metadata:
   name: istio-gcp-ingress
-  namespace: istio-system
-  annotations:
-    kubernetes.io/ingress.class: gce
-    kubernetes.io/ingress.global-static-ip-name: thanos
-    networking.gke.io/managed-certificates: thanos-ssl-cert
 spec:
-  rules:
-  - http:
-      paths:
-      - path: /*
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: istio-ingressgateway
-            port: 
-              number: 80
+  healthCheck:
+    requestPath: /healthz/ready
+    port: 15021
+    type: HTTP
