--- a/deployment/mesh-infra/routing/ingress.yaml
+++ b/deployment/mesh-infra/routing/ingress.yaml
@@ -80,6 +80,8 @@ spec:
   - match:  # NOTE (3)
     - uri:
         prefix: /grafana
+    rewrite:
+      uri: /
     route:
     - destination:
         host: grafana.default.svc.cluster.local
