Disable security for Quantumleap

--- a/deployment/mesh-infra/security/ingress-policy.yaml
+++ b/deployment/mesh-infra/security/ingress-policy.yaml
@@ -28,6 +28,7 @@ spec:
         - "/dazzler/*"
         - "/orion/*"
         - "/orion/version"
+        - "/quantumleap/*"
         - "/quantumleap/version"
         - "/grafana"
         - "/grafana/*"
